# ViveStream-Next

./: .gitignore  DESIGN.md  HOW_TO.md  LICENSE  PKGBUILD  README.md  index.html  install.sh  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: release.yml  test.yml
docs/yt-dlp/: EJS.md  Extractors.md  FAQ.md  Forks.md  Installation.md  PO Token Guide.md  Plugin Development.md  Plugins.md
src/: App.css  App.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  downloader.rs  lib.rs  main.rs  media_controls.rs  models.rs  server.rs  system.rs  tests.rs
src/assets/: icon.icns
src/assets/icons/: README.md
src/components/: NotificationSystem.css  NotificationSystem.tsx  PremiumPlaceholder.css  PremiumPlaceholder.tsx
src/pages/: ArtistPage.css  ArtistPage.tsx  Artists.css  Artists.tsx  Downloads.css  Downloads.tsx  Favourites.css  Favourites.tsx  Home.css  Home.tsx  Player.css  Player.tsx  Playlists.css  Playlists.tsx  Settings.css  Settings.tsx  Setup.css  Setup.tsx
src/tests/: App.test.tsx  Downloads.test.tsx  Ipc.test.tsx  Player.test.tsx  Router.test.tsx  Settings.test.tsx  Setup.test.tsx
