[package]
name = "vivestream-next"
version = "1.5.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "vivestream_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
warp = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }

# Setup / Download Dependencies
reqwest = { version = "0.12", features = ["json", "stream"] }
tar = "0.4"
xz2 = "0.1" 
zip = "2.1"
dirs-next = "2.0"
sha2 = "0.10"
souvlaki = "0.8.3"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
rusqlite = "0.31.0"
